--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ body {
 .button {
   align-items: center;
   text-align: center;
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
   cursor: pointer;
 }
@@ -43,6 +44,7 @@ body {
 .title {
   font-weight: 700;
   line-height: 1.14;
+  font-size: 14px;
   text-transform: uppercase;
   color: var(--title-text-color);
 }
@@ -52,8 +54,11 @@ body {
   text-align: center;
   font-size: 36px;
   line-height: 1.17;
-  text-transform: uppercase;
   color: var(--title-text-color);
+}
+
+.header-link.current {
+  color: var(--link-color);
 }
 
 /* -----------HEADER-------------- */
@@ -72,8 +77,11 @@ body {
   color: var(--title-text-color);
   text-decoration: none;
 }
-.header-item-left {
+.header-link.tel {
   color: var(--primery-text-color);
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 /* ------------HERO------------- */
@@ -104,6 +112,21 @@ body {
   background: #f5f4fa;
 }
 
+.solution-name {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+}
+
+.solution-text {
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+}
+
 /* -----------FOOTER------------- */
 .footer {
   background: #2f303a;
@@ -114,12 +137,18 @@ body {
 
 .footer-address {
   font-style: normal;
+  font-size: 500;
   color: #ffffff;
+}
+
+.footer-address-tel {
+  color: rgba(255, 255, 255, 0.6);
 }
 
 /* ------------PORTFOLIO---------- */
 
 .button-portfolio {
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.63;
